modal: attach to selection

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -91,6 +91,7 @@
 
     -->
 
+    <script type="text/javascript"><%- locals.state||'' %></script>
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/front/dependencies/build.js"></script>
