add switch mode editor/read

--- a/assets/styles/front/importer.less
+++ b/assets/styles/front/importer.less
@@ -127,9 +127,11 @@ body { padding-top: 70px; font-family: Arial }
     font-weight: bold;
   }
 }
-.agenda-navigation-view {
+.agenda-navigation-view, .agenda-navigation-editor {
   height: 30px;
+  width: 50%;
   position: relative;
+  background: #FFF;
   a {
     display: block;
     float: right;
@@ -137,6 +139,12 @@ body { padding-top: 70px; font-family: Arial }
     text-align: center;
     text-transform: uppercase;
     font-weight: bold;
+  }
+}
+.agenda-navigation-editor {
+
+  a {
+    float: left;
   }
 }
 
