better responsive calendar

--- a/assets/styles/front/importer.less
+++ b/assets/styles/front/importer.less
@@ -22,13 +22,12 @@ body { padding-top: 70px; font-family: Arial }
     .col-content {
       margin: 1px;
       background: #FFF;
-      height: 120px;
-    }
+      height: 100%;
+     }
   }
   .col-day {
-    height: 40px;
-  }
-  .col-active {
+   }
+  .col-active, .col-day-active {
     .col-content {
       background: #FFC156;
     }
@@ -75,16 +74,15 @@ body { padding-top: 70px; font-family: Arial }
     .col-content {
       margin: 1px;
       background: #FFF;
-      height: 80px;
-    }
+     }
   }
   .col-day {
-    height: 39px;
-    marign-bottom: 1px;
+     margin-bottom: 1px;
   }
   .col-day-active {
     .col-content {
       background: #FFC156;
+      height: 100%;
     }
   }
   .col-label {
