calendar: add exception

--- a/assets/styles/front/importer.less
+++ b/assets/styles/front/importer.less
@@ -146,4 +146,11 @@ body { padding-top: 70px; font-family: Arial }
   }
 }
 
+.col-day-disabled {
+  .col-content {
+    background: #CCC!important;
+    height: 100%;
+  }
+}
+
 
