--- a/assets/styles/front/importer.less
+++ b/assets/styles/front/importer.less
@@ -43,9 +43,7 @@ body { padding-top: 70px; font-family: Arial }
   }
   .event {
     position: absolute;
-    top: 0;
-    width: @agendaCell;
-    background: #FF0000;
+    background: #AAA;
     color: #FFF;
     font: 0.7em arial;
     z-index: 5;
