--- a/assets/styles/front/importer.less
+++ b/assets/styles/front/importer.less
@@ -151,4 +151,12 @@ body { padding-top: 70px; font-family: Arial }
   }
 }
 
+.agenda-panel {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom:0;
+  width: 20%;
+  background: #EFEFEF;
+}
 
