panel and event

--- a/assets/styles/front/importer.less
+++ b/assets/styles/front/importer.less
@@ -152,8 +152,8 @@ body { padding-top: 70px; font-family: Arial }
 }
 
 .agenda-panel {
-  position: absolute;
-  top: 0;
+  position: fixed;
+  top: 50px;
   right: 0;
   bottom:0;
   width: 20%;
