some fix, add simple modal style

--- a/assets/styles/front/importer.less
+++ b/assets/styles/front/importer.less
@@ -1,4 +1,4 @@
-body { padding-top: 70px; font-family: Arial }
+body { padding-top: 50px; font-family: Arial }
 
 @agendaCell: calc(100% / 7);
 
@@ -160,3 +160,14 @@ body { padding-top: 70px; font-family: Arial }
   background: #EFEFEF;
 }
 
+
+.agenda-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: #FFF;
+  opacity: 0.9;
+  z-index: 99;
+}
