event: text align center

--- a/assets/styles/front/importer.less
+++ b/assets/styles/front/importer.less
@@ -48,6 +48,7 @@ body { padding-top: 50px; font-family: Arial }
     background: #AAA;
     color: #FFF;
     font: 0.7em arial;
+    text-align: center;
     z-index: 5;
   }
 }
@@ -98,10 +99,10 @@ body { padding-top: 50px; font-family: Arial }
     background: #FF0000;
     color: #FFF;
     font: 0.7em arial;
+    text-align: center;
     z-index: 5;
   }
 }
-
 
 .col-day-disabled {
   z-index: 10;
