timepicker: add am/pm button

--- a/assets/styles/front/time-picker.less
+++ b/assets/styles/front/time-picker.less
@@ -11,10 +11,15 @@
   transform: translate(-50%, -50%);
   background: navy;
 }
-.time-circle-small {
-  width: 4%;
-  height: 4%;
+.time-circle-button {
+  width: 20%;
+  height: 20%;
+  line-height: 20%;
+  padding-top: 10%;
   background: black;
+  font-size: 0.7em;
+  color: #FFF;
+  text-align: center;
 }
 .time-hour, .time-minute, .time-dash {
   position: absolute;
