timepicker: add except hour

--- a/assets/styles/front/time-picker.less
+++ b/assets/styles/front/time-picker.less
@@ -48,7 +48,12 @@
     line-height: 32px;
     height: 32px;
     width: 32px;
-    background: #333;
+    background: #0000FF;
   }
 }
-
+.time-dash-disabled {
+  div {
+    background: #EEE;
+    color: #AAA
+  }
+}
