panel: add events day

--- a/assets/styles/front/panel.less
+++ b/assets/styles/front/panel.less
@@ -5,4 +5,19 @@
   bottom:0;
   width: 20%;
   background: #EFEFEF;
+
+  .panel-event {
+    color: #FFF;
+    .panel-event-title {
+      display:block;
+      font-weight: bold;
+    }
+    .panel-event-content {
+
+    }
+    .panel-event-date {
+      font-size: 0.8em;
+    }
+
+  }
 }
