calendar: add day view

--- a/assets/styles/front/importer.less
+++ b/assets/styles/front/importer.less
@@ -54,7 +54,9 @@ body { padding-top: 50px; font-family: Arial }
   }
 }
 
-
+.agenda-vertical.agenda-vertical-row {
+  width: 100%;
+}
 .agenda-vertical {
   position: relative;
   width: @agendaCell;
