filter: submit filter when field change

--- a/assets/styles/front/importer.less
+++ b/assets/styles/front/importer.less
@@ -2,6 +2,7 @@ body { padding-top: 50px; font-family: Arial }
 
 @agendaCell: calc(100% / 7);
 
+@import 'filter';
 @import 'modal';
 @import 'panel';
 @import 'navigation';
