--- a/assets/styles/front/filter.less
+++ b/assets/styles/front/filter.less
@@ -1,9 +1,26 @@
 
 .agenda-filter {
-  .list-unstyled {
-    display: inline-block;
+  background: #666;
+  color: #FFF;
+  min-height: 30px;
+  line-height: 30px;
+  a {
+    color: #FFF;
   }
-  .checkbox, .radio {
+  .form-group {
+    label {
+      margin-left: 12px;
+    }
+    background: #333;
+    margin:;
+  }
+  ul {
+    display: inline-block;
+    padding-left: 0;
+    margin-bottom: 0;
+  }
+  li {
+    position: relative;
     display: inline-block;
     padding: 3px 5px;
   }
