--- a/assets/styles/front/filter.less
+++ b/assets/styles/front/filter.less
@@ -1,11 +1,10 @@
 
 .agenda-filter {
-  background: #666;
-  color: #FFF;
+  text-align: right;
   min-height: 30px;
   line-height: 30px;
   a {
-    color: #FFF;
+    color: #333;
   }
   .form-group {
     label {
@@ -16,6 +15,7 @@
     display: inline-block;
     padding-left: 0;
     margin-bottom: 0;
+    margin-right: 50px;
   }
   li {
     position: relative;
