style: modal, timepicker, datetimepicker

--- a/assets/styles/front/importer.less
+++ b/assets/styles/front/importer.less
@@ -9,6 +9,11 @@ body { padding-top: 50px; font-family: Arial }
 @import 'panel';
 @import 'navigation';
 @import 'time-picker';
+@import 'date-time-picker';
+
+.float-right {
+  float: right;
+}
 
 .agenda-row {
   position: relative;
@@ -112,6 +117,7 @@ body { padding-top: 50px; font-family: Arial }
     height: 100%;
   }
 }
+
 
 
 
