--- a/assets/styles/front/modal.less
+++ b/assets/styles/front/modal.less
@@ -1,11 +1,12 @@
 .agenda-modal {
   position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  top: 85px;
+  left: 15px;
+  bottom: 15px;
+  right: 15px;
+  border: 5px solid #333;
   overflow: auto;
   background: #FFF;
-  opacity: 0.9;
+  opacity: 0.99;
   z-index: 99;
 }
