--- a/assets/styles/front/time-picker.less
+++ b/assets/styles/front/time-picker.less
@@ -9,7 +9,7 @@
   border-radius: 50%;
   transform-origin: bottom center;
   transform: translate(-50%, -50%);
-  background: navy;
+  background: #EEE;
 }
 .time-circle-button {
   width: 20%;
@@ -30,15 +30,15 @@
   height: 30%;
   transform-origin: bottom center;
   transform: translate(-50%, -50%);
-  background: green;
+  background: #333;
 }
 .time-minute {
-  background: red;
+  background: #AAA;
   top: -25%;
   height: 50%;
 }
 .time-dash {
-  background: orange;
+  background: #333;
   text-align:center;
   div {
     border-radius: 50%;
@@ -48,7 +48,7 @@
     line-height: 32px;
     height: 32px;
     width: 32px;
-    background: #0000FF;
+    background: #333;
   }
 }
 .time-dash-disabled {
