redesign info / navigation

--- a/assets/styles/front/importer.less
+++ b/assets/styles/front/importer.less
@@ -35,12 +35,14 @@ body { padding-top: 50px; font-family: Arial }
       padding: 1px 5px;
       border-top: 1px solid #FFF;
       border-right: 1px solid #FFF;
+      text-shadow: 0.5px 0.5px #333;
       height: 100%;
      }
   }
   .col, .col-day {
     .col-content {
       background: #F8F8F8;
+      text-shadow: 0.5px 0.5px #AAA;
      }
   }
   .col-active, .col-day-active {
@@ -115,6 +117,7 @@ body { padding-top: 50px; font-family: Arial }
     background: #DDD!important;
     color: #fff;
     height: 100%;
+    text-shadow: 0.5px 0.5px #333;
   }
 }
 
