--- a/assets/styles/front/info.less
+++ b/assets/styles/front/info.less
@@ -1,6 +1,13 @@
 .agenda-info {
   font-weight: bold;
   font-size: 1.2em;
-  text-decoration: underline;
+  span {
+    padding: 5px 15px;
+    color: #286090;
+    background: #FFF;
+    border-radius: 4px;
+    box-shadow: 1px 1px 1px #CCC;
+    margin: 5px;
+  }
 
 }
