--- a/assets/styles/front/navigation.less
+++ b/assets/styles/front/navigation.less
@@ -17,6 +17,7 @@
     color: #FFF;
     text-transform: uppercase;
     font-weight: bold;
+    text-shadow: 1px 1px #AAA;
   }
 }
 .agenda-navigation-view, .agenda-navigation-editor {
@@ -31,6 +32,11 @@
     text-align: center;
     text-transform: uppercase;
     font-weight: bold;
+  }
+  .btn-editor {
+    position: absolute;
+    bottom: 6px;
+    left: 6px;
   }
 }
 .agenda-navigation-editor {
