datetimePicker: change marge and font-size

--- a/assets/styles/front/date-time-picker.less
+++ b/assets/styles/front/date-time-picker.less
@@ -6,4 +6,12 @@
   z-index: 5;
   padding-bottom: 1px;
   padding-left: 1px;
+  .agenda-info {
+    font-size: 1em;
+    span {
+      padding: 2px 5px;
+      margin: 2px;
+    }
+
+  }
 }
