panel: datepicker: change marge and font-size

--- a/assets/styles/front/panel.less
+++ b/assets/styles/front/panel.less
@@ -8,6 +8,7 @@
 
   .panel-event {
     color: #FFF;
+
     .panel-event-title {
       display:block;
       font-weight: bold;
@@ -18,10 +19,17 @@
     .panel-event-date {
       font-size: 0.8em;
     }
-
   }
+
   .date-picker {
     font-size: 0.8em;
-  }
 
+    .agenda-info {
+      font-size: 1em;
+      span {
+        padding: 2px 5px;
+        margin: 2px;
+      }
+    }
+  }
 }
