panel: format date and design

--- a/assets/styles/front/panel.less
+++ b/assets/styles/front/panel.less
@@ -5,19 +5,25 @@
   bottom:0;
   width: 20%;
   background: #EFEFEF;
+  overflow: auto;
 
   .panel-event {
     color: #FFF;
+    margin: 3px 3px 0 3px;
 
     .panel-event-title {
-      display:block;
+      text-align: center;
       font-weight: bold;
     }
     .panel-event-content {
-
+      min-height:6px;
+      padding: 6px 12px;
+      font-size: 0.9em;
+      text-align: justify;
     }
     .panel-event-date {
-      font-size: 0.8em;
+      text-align: center;
+      font-size: 0.7em;
     }
   }
 
