add text-shadow to panel and event

--- a/assets/styles/front/panel.less
+++ b/assets/styles/front/panel.less
@@ -10,6 +10,7 @@
   .panel-event {
     color: #FFF;
     margin: 3px 3px 0 3px;
+    text-shadow: 1px 1px #333;
 
     .panel-event-title {
       text-align: center;
