--- a/assets/styles/front/importer.less
+++ b/assets/styles/front/importer.less
@@ -55,7 +55,8 @@ body { padding-top: 50px; font-family: Arial }
     position: absolute;
     background: #AAA;
     color: #FFF;
-    font: 0.7em arial;
+    text-shadow: 1px 1px #333;
+    font: 0.8em arial;
     text-align: center;
     z-index: 5;
   }
