--- a/assets/styles/front/panel.less
+++ b/assets/styles/front/panel.less
@@ -26,6 +26,10 @@
       text-align: center;
       font-size: 0.7em;
     }
+    .panel-event-member {
+      text-align: center;
+      font-size: 0.7em;
+    }
   }
 
   .date-picker {
