--- a/assets/styles/front/importer.less
+++ b/assets/styles/front/importer.less
@@ -87,6 +87,8 @@ body { padding-top: 50px; font-family: Arial }
       padding: 1px 5px;
       border-top: 1px solid #FFF;
       border-right: 1px solid #FFF;
+      font-size: 0.7em;
+      line-height: 0em;
     }
   }
   .col, .col-day {
