week/day: move position start if except hours

--- a/assets/styles/front/importer.less
+++ b/assets/styles/front/importer.less
@@ -31,6 +31,8 @@ body { padding-top: 50px; font-family: Arial }
   -webkit-align-content: flex-end;
   align-content: flex-end;
 
+  overflow: hidden;
+
   .col, .col-label, .col-day {
     box-sizing: border-box;
     width: @agendaCell;
