event: add borderRadius

--- a/assets/styles/front/importer.less
+++ b/assets/styles/front/importer.less
@@ -64,6 +64,8 @@ body { padding-top: 50px; font-family: Arial }
     text-shadow: 1px 1px #333;
     font: 0.8em arial;
     text-align: center;
+    border-radius: 12px;
+    box-shadow: 0.5px 0.5px 2px #ccc;
   }
 }
 
