--- a/assets/styles/front/navigation.less
+++ b/assets/styles/front/navigation.less
@@ -21,7 +21,8 @@
   }
 }
 .agenda-navigation-view, .agenda-navigation-editor {
-  height: 30px;
+  height: 48px;
+  line-height: 46px;
   width: 50%;
   position: relative;
   background: #FFF;
