--- a/assets/styles/front/importer.less
+++ b/assets/styles/front/importer.less
@@ -38,8 +38,8 @@ body { padding-top: 50px; font-family: Arial }
     width: @agendaCell;
     .col-content {
       padding: 1px 5px;
-      border-top: 1px solid rgba(255, 255, 255, 0.3);
-      border-right: 1px solid rgba(255, 255, 255, 0.3);
+      border-top: 1px solid rgba(255, 255, 255, 0.5);
+      border-right: 1px solid rgba(255, 255, 255, 0.5);
       text-shadow: 0.5px 0.5px #333;
       height: 100%;
      }
@@ -92,8 +92,8 @@ body { padding-top: 50px; font-family: Arial }
     .col-content {
       height: 100%;
       padding: 1px 5px;
-      border-top: 1px solid rgba(255, 255, 255, 0.3);
-      border-right: 1px solid rgba(255, 255, 255, 0.3);
+      border-top: 1px solid rgba(255, 255, 255, 0.5);
+      border-right: 1px solid rgba(255, 255, 255, 0.5);
       font-size: 0.7em;
       line-height: 0em;
     }
@@ -141,4 +141,13 @@ body { padding-top: 50px; font-family: Arial }
   .col, .col-day {
     z-index: 0;
   }
+}
+
+.events:hover {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: auto;
 }
