replace body by root

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <div id="body"><%- body %></div>
+    <div id="root"><%- body %></div>
 
     <script type="text/javascript"><%- locals.state||'' %></script>
     <!--SCRIPTS-->
