--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -64,7 +64,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
@@ -94,8 +94,8 @@
     <script type="text/javascript"><%- locals.state||'' %></script>
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
-    <script src="/js/front/dependencies/build.js"></script>
-    <script src="/js/front/bundle.js"></script>
+    <script src="/js/common.js"></script>
+    <script src="/js/front.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
